--- a/app/src/main/res/layout/list_child_item.xml
+++ b/app/src/main/res/layout/list_child_item.xml
@@ -4,6 +4,8 @@
     android:layout_height="120dp"
     android:layout_marginBottom="5dp"
     android:layout_marginTop="5dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     android:background="@drawable/edittext_darkgray"
     android:orientation="vertical">
 
