--- a/app/src/main/res/layout/activity_add_device.xml
+++ b/app/src/main/res/layout/activity_add_device.xml
@@ -21,17 +21,17 @@
             android:id="@+id/add_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="ADD"
+            android:text="Device"
             android:textColor="#ffffff" />
 
         <EditText
-            android:id="@+id/bottleID"
+            android:id="@+id/device_id"
             android:layout_width="300dp"
             android:layout_height="40dp"
             android:layout_below="@id/add_text"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_darkgray"
-            android:hint="ButtonID"
+            android:hint="DeviceID"
             android:paddingLeft="40dp"
             android:singleLine="true" />
 
@@ -44,49 +44,37 @@
             android:padding="1dp"
             android:src="@drawable/bottle" />
 
-        <TextView
-            android:id="@+id/hint_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/bottleID"
-            android:layout_marginTop="2dp"
-            android:text="hint:ID on Bottle"
-            android:textColor="#ffffff"
-            android:textSize="12sp" />
-
         <Button
             android:id="@+id/qr_code_button"
-            android:layout_width="80dp"
-            android:layout_height="30dp"
+            android:layout_width="100dp"
+            android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/bottleID"
-            android:layout_marginTop="2dp"
+            android:layout_below="@id/device_id"
+            android:layout_marginTop="10dp"
             android:background="@drawable/qrcodebutton2x" />
 
         <EditText
-            android:id="@+id/note"
+            android:id="@+id/device_note"
             android:layout_width="300dp"
-            android:layout_height="150dp"
+            android:layout_height="40dp"
             android:layout_below="@id/qr_code_button"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/edittext_darkgray"
-            android:gravity="top"
-            android:hint="Notes"
+            android:hint="Note"
             android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5dp" />
+            android:singleLine="true" />
 
         <Button
             android:id="@+id/add_button"
             android:layout_width="300dp"
             android:layout_height="40dp"
-            android:layout_below="@id/note"
-            android:layout_marginTop="20dp"
+            android:layout_below="@id/device_note"
             android:layout_marginBottom="20dp"
+            android:layout_marginTop="20dp"
             android:background="@drawable/green_button"
             android:text="ADD"
             android:textColor="#ffffff" />
-        
+
     </RelativeLayout>
 
 </RelativeLayout>
