--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -31,6 +31,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_darkgray"
             android:hint="Name"
+            android:maxLength="16"
             android:paddingLeft="35dp"
             android:singleLine="true" />
 
@@ -42,6 +43,7 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_darkgray"
             android:hint="Email"
+            android:inputType="textEmailAddress"
             android:paddingLeft="35dp"
             android:singleLine="true" />
 
@@ -64,6 +66,7 @@
             android:background="@drawable/edittext_darkgray"
             android:hint="password"
             android:inputType="textPassword"
+            android:maxLength="16"
             android:paddingLeft="35dp"
             android:singleLine="true" />
 
@@ -96,7 +99,7 @@
             android:text="SUBMIT"
             android:textColor="#ffffff" />
 
-       
+
     </RelativeLayout>
 
 </RelativeLayout>
