--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -35,5 +35,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/list_title_layout"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="10dp"
+        android:divider="@null" />
 </RelativeLayout>
