--- a/app/src/main/res/layout/list_child_item.xml
+++ b/app/src/main/res/layout/list_child_item.xml
@@ -6,7 +6,7 @@
     android:layout_marginTop="5dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
-    android:background="@drawable/edittext_darkgray"
+    android:background="@drawable/layout_round"
     android:orientation="vertical">
 
     <TextView
@@ -31,14 +31,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="10dp"
         android:text="Capactity:" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
 
 
@@ -52,7 +52,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginLeft="15dp"
+            android:layout_marginLeft="10dp"
             android:text="76%"
             android:textColor="#ffffff" />
 
