--- a/app/src/main/res/layout/list_group_item.xml
+++ b/app/src/main/res/layout/list_group_item.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="30dp"
-    android:background="@drawable/edittext_darkgray"
-   >
+    android:layout_height="40dp"
+    android:background="@drawable/edittext_darkgray">
+
     <TextView
+        android:id="@+id/item_group_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/item_group_title"
         android:layout_centerVertical="true"
         android:paddingLeft="10dp"
-        android:textColor="#ffffff"
         android:text="Title"
-        android:textSize="18sp"/>
+        android:textColor="#ffffff"
+        android:textSize="18sp" />
+
     <ImageView
+        android:id="@+id/item_group_expansion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:id="@+id/item_group_expansion"
         android:paddingRight="10dp"
-        android:textColor="#ffffff"
-        android:src="@mipmap/ic_right"/>
+        android:src="@mipmap/ic_right"
+        android:textColor="#ffffff" />
 </RelativeLayout>
