--- a/app/src/main/res/layout/list_list_child.xml
+++ b/app/src/main/res/layout/list_list_child.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/list_background">
+    android:background="@drawable/list_child_layout">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/list"
