--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -64,7 +64,7 @@
             android:layout_below="@id/sign_up_account"
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_darkgray"
-            android:hint="password"
+            android:hint="Password"
             android:inputType="textPassword"
             android:maxLength="16"
             android:paddingLeft="35dp"
