--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -15,13 +15,15 @@
         android:id="@+id/layout"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/problem_feedback_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="問題回報："
+
             android:textColor="#ffffff" />
 
         <EditText
