--- a/app/src/main/res/layout/list_group_item.xml
+++ b/app/src/main/res/layout/list_group_item.xml
@@ -1,27 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:paddingTop="3dp">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="40dp"
-    android:background="@drawable/edittext_darkgray">
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/layout"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/list_group_normal">
 
-    <TextView
-        android:id="@+id/item_group_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:paddingLeft="10dp"
-        android:text="Title"
-        android:textColor="#ffffff"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/item_group_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:paddingLeft="10dp"
+            android:text="Title"
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
 
-    <ImageView
-        android:id="@+id/item_group_expansion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:paddingRight="10dp"
-        android:src="@mipmap/ic_right"
-        android:textColor="#ffffff" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/item_group_expansion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:paddingRight="10dp"
+            android:src="@mipmap/ic_right"
+            android:textColor="#ffffff" />
+    </RelativeLayout>
+</FrameLayout>
