--- a/app/src/main/res/drawable/layout_round.xml
+++ b/app/src/main/res/drawable/layout_round.xml
@@ -5,5 +5,5 @@
     <corners android:radius="5dp" />
     <stroke
         android:width="1dip"
-        android:color="#FFFFFF" />
+        android:color="#CCCCCC" />
 </shape>
