--- a/app/src/main/res/drawable/list_group_normal.xml
+++ b/app/src/main/res/drawable/list_group_normal.xml
@@ -1,6 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <solid android:color="#8094A5" />
-    <corners android:bottomLeftRadius="5dp"
-        android:bottomRightRadius="5dp"/>
+    <corners android:radius="5dp"/>
 </shape>
