--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -21,7 +21,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="SING UP"
-            android:textColor="#ffffff" />
+            android:textColor="#ffffff"
+            android:textSize="18sp" />
 
         <EditText
             android:id="@+id/sign_up_name"
@@ -65,7 +66,6 @@
             android:layout_marginTop="10dp"
             android:background="@drawable/edittext_darkgray"
             android:hint="Password"
-            android:inputType="textPassword"
             android:maxLength="16"
             android:paddingLeft="35dp"
             android:singleLine="true" />
